--- a/backend/src/main/webapp/app/views/dym_list/list_det.html
+++ b/backend/src/main/webapp/app/views/dym_list/list_det.html
@@ -21,7 +21,7 @@
 				<!-- <th style="width: 10%;">Notice</th> -->
 				<th style="width: 10%;">กรุ๊ป</th>
 				<th style="width: 10%;">สถานะ</th>
-				<th style="width: 10%;">ซ่อนบัญชี</th>
+				<th style="width: 10%;">เว้นการติดต่อ</th>
 				<th style="width: 10%;"></th>
 			</tr>
 		<thead>
