--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -1,4 +1,11 @@
-
+<style>
+.suspend {
+	cursor: not-allowed !important;
+	color: transparent !important;
+    text-shadow: 0 0 7px rgba(0,0,0,0.5);
+    user-select: none;
+}
+</style>
 <div ui-view>
 
 	<div class="panel panel-info" style="margin: 0;" ng-init="initDateEl()">
@@ -172,8 +179,10 @@
 			<thead>
 			<!-- <tbody class="noselect"> -->
 			<tbody>
-				<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" style="cursor: pointer; color: #337AB7;" 
-					ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive}">
+				<tr ng-repeat="data in taskDetails track by $index" ng-click="data.isSuspend ? '' : view(data)" style="cursor: pointer; color: #337AB7;" 
+					ng-class="{'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 
+					           'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive,
+					           'suspend': data.isSuspend}">
 					
 					<td style="vertical-align: middle; text-align: center;" ng-click="chk.smsSelect($event, data)" ng-if="isSmsEnable">
 						<input type="checkbox" ng-model="data.selector" />
