--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -88,35 +88,35 @@
 			<tr>
 				<th style="white-space: nowrap; text-align: center; color: black;">#</th>
 				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_traceDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
+					<a href="" ng-click="columnOrder('sys_traceDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 						วันที่ติดตาม&nbsp;
 						<i ng-class="{'comm-order-active': ('sys_traceDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': ('sys_traceDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 					</a>
 				</th>
 				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_nextTimeDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
+					<a href="" ng-click="columnOrder('sys_nextTimeDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 						วันนัด Call&nbsp;
 						<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': ('sys_nextTimeDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 					</a>
 				</th>
 				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_appointDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
+					<a href="" ng-click="columnOrder('sys_appointDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 						วันนัดชำระ&nbsp;
 						<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': ('sys_appointDate' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 					</a>
 				</th>
 				<th style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder('sys_appointAmount', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
+					<a href="" ng-click="columnOrder('sys_appointAmount', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 						ยอดนัดชำระ&nbsp;
 						<i ng-class="{'comm-order-active': ('sys_appointAmount' == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': ('sys_appointAmount' == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
 					</a>
 				</th>
 				<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center;">
-					<a href="" ng-click="columnOrder(h.columnName, 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative; color: black;">
+					<a href="" ng-click="columnOrder(h.columnName, 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 						{{ h.columnNameAlias || h.columnName }}&nbsp;
 						<i ng-class="{'comm-order-active': (h.columnName == column) && (order == 'desc')}" class="fa fa-sort-desc fw" style="position: absolute; top: 2px;"></i>
 						<i ng-class="{'comm-order-active': (h.columnName == column) && (order == 'asc')}" class="fa fa-sort-up fw" style="position: absolute; top: 2px;"></i>
@@ -126,18 +126,21 @@
 		<thead>
 		<!-- <tbody class="noselect"> -->
 		<tbody>
-			<tr ng-repeat="data in taskDetails track by $index" ng-click="view(data)" ng-dblclick="askModal()" style="cursor: pointer;"
-				ng-class="{'': data['sys_compareDateStatus'] == 0, 'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 'comm-text-font-weight-active': data.id == idActive}">
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">
+			<tr ng-repeat="data in taskDetails track by $index" ng-click="data.isSuspend ? '' : view(data)" ng-dblclick="data.isSuspend ? '' : askModal()" style="cursor: pointer;"
+				ng-class="{'': data['sys_compareDateStatus'] == 0, 'comm-bg-color-danger': data['sys_compareDateStatus'] == 1, 
+				'comm-bg-color-warning': data['sys_compareDateStatus'] == 2, 'comm-bg-color-info': data['sys_compareDateStatus'] == 3, 
+				'comm-text-font-weight-active': data.id == idActive, 'suspend': data.isSuspend}">
+				
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">
 					<i class="fa fa-hand-o-right" ng-show="data.id == idActive"></i>
 						{{ data.rowIndex = ($index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage)) }}
 					<i class="fa fa-hand-o-left" ng-show="data.id == idActive"></i>
 				</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">{{ data['sys_traceDate'] | date:gb_dateTimeFormat }}</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">{{ data['sys_nextTimeDate'] | date:gb_dateTimeFormat }}</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">{{ data['sys_appointDate'] | date:gb_dateTimeFormat }}</td>
-				<td style="vertical-align: middle; text-align: center; white-space: nowrap; color: black;">{{ data['sys_appointAmount'] | number:2 }}</td>
-				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap; color: black;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_traceDate'] | date:gb_dateTimeFormat }}</td>
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_nextTimeDate'] | date:gb_dateTimeFormat }}</td>
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointDate'] | date:gb_dateTimeFormat }}</td>
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['sys_appointAmount'] | number:2 }}</td>
+				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 					{{ 
 					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
 					   h.dataType == 'num' ? (data[h.columnName] | number:2) : 
