--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -34,6 +34,12 @@
 	#detail .label {
 		white-space: normal;
 	}
+	.suspend {
+		cursor: not-allowed !important;
+		color: transparent !important;
+	    text-shadow: 0 0 7px rgba(0,0,0,0.5);
+	    user-select: none;
+	}
 	[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
 	  display: none !important;
 	}
@@ -42,7 +48,7 @@
 <div class="row">
 	<div class="col-xs-12">
 		<div class="btn-group pull-left" style="margin: 0px 0 3px 0;">
-		  <button type="button" class="btn btn-primary btn-outline" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
+		  <button type="button" ng-disabled="taskDetail[0].isSuspend" class="btn btn-primary btn-outline" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
 		</div>
 		
 		<button type="button" style="margin-left: 3px;" class="btn btn-danger btn-outline pull-right" ng-click="disable()" ng-show="isEditable && isDisableBtnShow">ยุติการติดตาม</button>
@@ -93,7 +99,7 @@
 					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName], f.noticeForms, detail[f.noticeCusColName]) : ''"> -->
 				<div class="col-xs-7" style="padding: 1px 0 0 0; border-top: 1px solid #234E7C; cursor: default;">
 				     <div ng-style="f.colorBg ? {'display': 'inline-block'} : '' ">
-						 <span ng-class="{label: f.colorBg}" 
+						 <span ng-class="{label: f.colorBg, 'suspend': detail.isSuspend}" 
 						 	   style="display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left; position: absolute;"
 						       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding': '4px 3px 0px 3px', 'min-height': '23px', 'max-height': '39px', 'line-height': '1.32999999', 'top':'1px'} : f.colorFont ? {'color': f.colorFont} : {'padding': '4px 0 0 0'} ">
 								   {{ 
@@ -110,7 +116,7 @@
 	</div>
 </div>
 
-<div class="row" ng-show="readMore.fieldName">
+<div class="row" ng-show="readMore.fieldName && !taskDetail[0].isSuspend">
 	<div class="col-xs-12">
 		<div class="comm-rcorners-1" style="overflow: auto; background-color: #356190; margin-bottom: 1px; min-height: 64px; font-size: 13px; color: #E1E2E3; cursor: default;">
 			<table style="width: 100%;">
@@ -156,7 +162,7 @@
 <div class="row collapse in" id="collapseActionPanel" ng-hide="isKYS">
 	<div class="col-xs-12">
 		<div class="btn-group" style="margin: 3px 0 3px 0;">
-		  <button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)" id="{{ menu.id }}">{{ menu.name }}</button>
+		  <button type="button" ng-disabled="taskDetail[0].isSuspend" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': menu.btnActive}" ng-repeat="menu in tabActionMenus" ng-click="changeTabAction(menu)" id="{{ menu.id }}">{{ menu.name }}</button>
 		</div>
 		
 		&nbsp;&nbsp;&nbsp;
@@ -179,13 +185,13 @@
 		
 			<!-- &nbsp;&nbsp;&nbsp; -->
 		  	<button type="button" class="btn btn-primary" title="{{ isOutOfWorkingTime ? 'นอกเวลาทำงาน' : 'บันทึกผลการติดตาม' }}"
-		  		    style="padding: 5px 15px 5px 15px;" ng-click="askModal()" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0) || askModalObj.isOldTrace || lastTabActionMenuActive.id != 1">
+		  		    style="padding: 5px 15px 5px 15px;" ng-click="askModal()" ng-disabled="isOutOfWorkingTime || (taskDetails.length == 0) || askModalObj.isOldTrace || lastTabActionMenuActive.id != 1 || taskDetail[0].isSuspend">
 				<i class="fa fa fa-plus fa-1x"></i>
 			</button>
 		</div>
 		
 	</div>
-	<div class="col-xs-12" style="min-height: 315px;" ng-include="lastTabActionMenuActive.url"></div>
+	<div class="col-xs-12" style="min-height: 315px;" ng-include="taskDetail[0].isSuspend ? emptyHtml : lastTabActionMenuActive.url"></div>
 </div>
 
 
@@ -275,7 +281,7 @@
 										  	<div class="form-group">
 												<label class="control-label">{{ list.name }}</label>
 												<small style="position: absolute; right: 14px; color: #d58512" ng-show="list.isSuspend">
-													<i class="fa fa-exclamation-triangle" style="color: #d58512"></i>ซ่อนบัญชี
+													<i class="fa fa-exclamation-triangle"></i>เว้นการติดต่อ
 												</small>
 												<div class="input-group input-group-sm">
 													<div class="input-group-btn" ng-show="list.dymListDetGroup.length > 0">
