--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -39,13 +39,6 @@ fieldset {
                 </div>
                 <div class="panel-body">
                 	<div class="form-horizontal">
-                		
-                		<!-- <div class="form-group" ng-show="group0">
-							<label class="control-label col-md-3" style="color: #337AB7;">Disable: </label>
-							<div class="col-md-6">
-								<input type="checkbox" class="form-control">
-							</div>
-						</div> -->
 						<div class="form-group" ng-show="group0">
 							<label class="control-label col-md-3" style="color: #337AB7;">Disable: </label>
 							<div class="col-md-6">
@@ -72,11 +65,18 @@ fieldset {
 						</div>
 						
 						<div class="form-group" ng-show="group0">
+							<label class="control-label col-md-3" style="color: #337AB7;">แจ้งเตือน: </label>
+							<div class="col-md-6">
+								<a href="" class="form-control no-border" e-class="form-control" e-style="width: 100%; margin-left: 15px;" buttons="no" onaftersave="update()" editable-text="warning">{{ warning || 'คลิกเพื่อแก้ใข' }}</a>
+							</div>
+						</div>
+						
+						<!-- <div class="form-group" ng-show="group0">
 							<label class="control-label col-md-3" style="color: #337AB7;">ฐานข้อมูลประเทศไทย: </label>
 							<div class="col-md-4">
 								<input type="file" class="form-control" nv-file-select="" uploader="uploaderThailandDb" accept=".dat" />
 							</div>
-						</div>
+						</div> -->
 				
 						<!-- <div class="form-group" ng-show="group0">
 							<label class="control-label col-md-3" style="color: #337AB7;">License: </label>
