--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -18,7 +18,7 @@
                 	<div class="panel panel-info" style="margin: 0;">
 						<div class="panel-heading">
 							<form class="form-inline" ng-submit="search()" name="searchForm" novalidate>
-							
+								<fieldset ng-disabled="isLoading">
 								<div class="row">
 									<div class="col-md-12">
 									
@@ -167,7 +167,7 @@
 									   </button> -->
 									</div>  
 								</div>
-							
+							</fieldset>
 							</form>
 						</div>
 						
