--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -11,6 +11,7 @@
 	<div class="panel panel-info" style="margin: 0;" ng-init="initDateEl()">
 		<div class="panel-heading">
 			<form class="form-inline" ng-submit="searchBtn()">
+				<fieldset ng-disabled="isLoading">
 				<div class="row">
 					<div class="col-xs-12">
 					  <div class="form-group input-group">
@@ -72,7 +73,7 @@
 						<div class="form-group input-group" ng-show="dymSearch && dymSearch.length > 0">
 							<span class="input-group-addon">Filter</span>
 							<div class="input-group">
-								<select style="width: 120px;" name="fiedName" class="form-control" ng-model="formData.dymSearchFieldName" ng-options="option.name for option in dymSearch" ng-change="searchBtn()">
+								<select style="width: 120px;" name="fiedName" class="form-control" ng-model="formData.dymSearchFieldName" ng-options="option.name for option in dymSearch">
 									<option value="">--Select--</option>
 						  		</select>
 						  		<span class="input-group-addon"></span>
@@ -99,7 +100,7 @@
 					    <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 					</div>
 			   </div>
-			   
+			   </fieldset>
 			</form>
 		</div>
 		
