--- a/backend/src/main/webapp/app/styles/checkAnimate.css
+++ b/backend/src/main/webapp/app/styles/checkAnimate.css
@@ -9,7 +9,7 @@
 .radio_animate .cr {
     position: relative;
     display: inline-block;
-    border: 1px solid #a9a9a9;
+    border: 1.5px solid #337AB7;
     border-radius: .25em;
     width: 1.3em;
     height: 1.3em;
