--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -37,7 +37,7 @@
 <div class="table-responsive" style="padding: 0; min-height: 223px;">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
-			<tr style="color: #337AB7;">
+			<tr style="color: #337AB7; background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 				<th style="width: 3%; text-align: center; white-space: nowrap;">#</th>
 				<th style="width: 13%; text-align: center; white-space: nowrap;">วันที่บันทึก</th>
 				<th style="width: 10%; text-align: center; white-space: nowrap;">ประเภทการชำระ</th>
