--- a/backend/src/main/webapp/app/views/forecast/main.html
+++ b/backend/src/main/webapp/app/views/forecast/main.html
@@ -122,7 +122,7 @@
 										<div class="form-group input-group" ng-show="dymSearch && dymSearch.length > 0">
 											<span class="input-group-addon">Filter</span>
 											<div class="input-group">
-												<select style="width: 120px;" name="fiedName" class="form-control" ng-model="formData.dymSearchFieldName" ng-options="option.name for option in dymSearch" ng-change="search()">
+												<select style="width: 120px;" name="fiedName" class="form-control" ng-model="formData.dymSearchFieldName" ng-options="option.name for option in dymSearch">
 													<option value="">--Select--</option>
 										  		</select>
 										  		<span class="input-group-addon"></span>
@@ -162,7 +162,7 @@
 					<div class="table-responsive" style="padding: 0;">
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
-								<tr>
+								<tr style="background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 									<th style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder('createdDateTime')" style="padding-left: 30px; padding-right: 30px; position: relative;">
