--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -55,7 +55,7 @@
 					  <div class="form-group input-group" ng-show="dymSearch && dymSearch.length > 0">
 							<span class="input-group-addon">Filter</span>
 							<div class="input-group">
-								<select style="width: 120px;" name="fiedName" class="form-control" ng-model="formData.dymSearchFieldName" ng-options="option.name for option in dymSearch" ng-change="search()">
+								<select style="width: 120px;" name="fiedName" class="form-control" ng-model="formData.dymSearchFieldName" ng-options="option.name for option in dymSearch">
 									<option value="">--Select--</option>
 						  		</select>
 						  		<span class="input-group-addon"></span>
@@ -73,6 +73,12 @@
 	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
 		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
 			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
+		</span>
+		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;" ng-show="selector.isAllSelected">
+			เลือก<span ng-show="selector.isAllOfAllSelected">ทั้งหมด</span> <u>{{ selector.isAllOfAllSelected ? totalItems : selected.size }}</u> รายการ
+			<u style="cursor: pointer; color: #337ab7; font-weight: bold;" ng-click="selector.isAllOfAllSelected = true" ng-hide="selector.isAllOfAllSelected">
+				เลือกทั้งหมด {{ totalItems }} รายการ
+			</u>
 		</span>
 		<pagination ng-change="pageChanged()" total-items="totalItems"
 						first-text="{{'pagination.first' | translate}}"
@@ -95,8 +101,28 @@
 <div class="table-responsive">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
-			<tr>
+			<tr style="background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
+				<th style="white-space: nowrap;; text-align: center; width: 10px;" ng-if="isReceipt">	
+					<div class="checkbox_animate" style="white-space: normal; display: inline-block; position: absolute;">
+						<label style="cursor: pointer;" title="เลือกทั้งหมด">
+			            	<input type="checkbox" ng-model="selector.isAllSelected" ng-click="selectAll($event)">
+			            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+			          	</label>
+			        </div>
+			        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<i class="fa fa-files-o fa-lg" title="พิมพ์ใบเสร็จ(ที่เลือก)" style="cursor: pointer;" ng-click="beforePrintReceipt()"></i>
+				</th>
+				
 				<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
+									
+				<th style="white-space: nowrap; text-align: center; color: #337AB7;" ng-if="isReceipt">
+					เลขที่ใบเสร็จ
+				</th>
+				
+				<th style="white-space: nowrap; text-align: center; color: #337AB7;" ng-if="isReceipt">
+					วันที่ออกใบเสร็จ
+				</th>
+				
 				<th style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
 					วันที่นำเข้า
 				</th>
@@ -111,7 +137,31 @@
 		<tbody>
 			<tr ng-repeat="data in paymentDetails track by $index" ng-class="{'comm-row-selected': data.selected}" 
 			    ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetail['_id'])">
+				
+				<td style="vertical-align: middle; text-align: center; white-space: nowrap; cursor: default;" ng-if="isReceipt" ng-click="preventEvent($event, data)">
+					
+					<div class="checkbox_animate" style="position: absolute;">
+						<label style="cursor: pointer;">
+			            	<input type="checkbox" ng-model="data.isSelected" ng-click="clickChkbox($event, data)">
+			            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+			          	</label>
+			        </div>
+					
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<i class="fa fa-file-o fa-fw" ng-class="data['sys_printedDateTime'] ? 'fa-file' : 'fa-file-o'" style="cursor: pointer;" ng-click="beforePrintReceipt(data._id)" title="พิมพ์ใบเสร็จ"></i>
+					<!-- fa-file for already printed-->
+				</td> 
+				
 				<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+				
+				<td style="vertical-align: middle; white-space: nowrap; text-align: center;" ng-if="isReceipt">
+					{{ data['sys_receiptNo'] }}
+				</td>
+				
+				<td style="vertical-align: middle; white-space: nowrap; text-align: center;" ng-if="isReceipt">
+					{{ data['sys_printedDateTime'] | date:gb_dateTimeFormat }}
+				</td>
+				
 				<td style="vertical-align: middle; white-space: nowrap; text-align: center;">
 					{{ data['sys_createdDateTime'] | date:gb_dateTimeFormat }}
 				</td>
