--- a/backend/src/main/webapp/app/views/sms/main.html
+++ b/backend/src/main/webapp/app/views/sms/main.html
@@ -87,7 +87,7 @@
 					<div class="table-responsive" style="padding: 0;">
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
-								<tr>
+								<tr style="background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 									<th style="white-space: nowrap; text-align: center; color: #337AB7; width: 10px;" ng-show="formData.status != 1">
 										&nbsp;&nbsp;&nbsp;<input type="checkbox" ng-model="chk.selectorAll" ng-click="chk.selectAll($event)" />&nbsp;&nbsp;&nbsp;
 									</th>
