--- a/backend/src/main/webapp/app/views/working/tab_payment.html
+++ b/backend/src/main/webapp/app/views/working/tab_payment.html
@@ -21,7 +21,7 @@
 <div class="table-responsive" style="padding: 0;">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
-			<tr>
+			<tr style="background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 				<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 				<th ng-repeat="h in headersPayment" style="white-space: nowrap; text-align: center; color: #337AB7;">
 					{{ h.columnNameAlias || h.columnName }}
