--- a/backend/src/main/webapp/app/views/working/tab_related.html
+++ b/backend/src/main/webapp/app/views/working/tab_related.html
@@ -2,7 +2,7 @@
 <div class="table-responsive col-md-12" style="padding: 0; margin: 0;">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
-			<tr style="color: #337AB7;">
+			<tr style="color: #337AB7; background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 				<th style="white-space: nowrap; text-align: center;">#</th>
 				<th style="white-space: nowrap; text-align: center;">วันนัดชำระ</th>
 				<th style="white-space: nowrap; text-align: center;">วันนัด Call</th>
