--- a/backend/src/main/webapp/app/views/working/tab_tasklist.html
+++ b/backend/src/main/webapp/app/views/working/tab_tasklist.html
@@ -1,5 +1,5 @@
 
-<div class="panel panel-success" style="margin: 0;">
+<div class="panel panel-info" style="margin: 0;">
 	<div class="panel-heading">
 		<form class="form-inline" ng-submit="searchBtn('detail', dsf)">
 		  <div class="row" style="color: black;">
@@ -22,8 +22,8 @@
 			  </div>
 			  		
 			  &nbsp;&nbsp;
-			  <button type="button" class="btn btn-outline btn-success" ng-click="clearSearchForm(false, 'detail')">{{'user.search.clear_btn' | translate}}</button>
-			  <button type="submit" class="btn btn-outline btn-success">ค้นหา</button>
+			  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm(false, 'detail')">{{'user.search.clear_btn' | translate}}</button>
+			  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 				   		
 			  <!-- <div class="checkbox">
 			    <label>
@@ -64,8 +64,8 @@
 		</form>
 	</div>		
 	
-	<div class="alert alert-success form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
-		<span class="input-group-addon" style="border: 0px; background: none; color: black;">
+	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
 			{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
 		</span>
 		<pagination ng-change="pageChanged()" total-items="totalItems"
@@ -76,16 +76,16 @@
 					ng-model="formData.currentPage" items-per-page="formData.itemsPerPage"
 					max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
 					rotate="false" num-pages="numPages" style="margin: auto;" />
-		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: black;">
+		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
 			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="searchBtn('detail')"></select>&nbsp;{{'pagination.per_page' | translate}}								
 		</span>
 	</div>
 </div>
 
-<div class="table-responsive collapse table-success scrollbar-success" style="padding: 0;" id="collapseAccList">
+<div class="table-responsive collapse table-success" style="padding: 0;" id="collapseAccList">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
-			<tr>
+			<tr style="background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 				<th style="white-space: nowrap; text-align: center; color: black;">#</th>
 				<th style="white-space: nowrap; text-align: center;">
 					<a href="" ng-click="columnOrder('sys_traceDate', 'detail')" style="padding-left: 30px; padding-right: 30px; position: relative;">
