--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -44,7 +44,7 @@
 <div class="table-responsive" style="padding: 0; min-height: 223px;">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
-			<tr style="color: #337AB7;">
+			<tr style="color: #337AB7; background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 				<th style="text-align: center; white-space: nowrap;">#</th>
 				<th style="text-align: center; white-space: nowrap;">วันที่ติดตาม</th>
 				<th style="text-align: center; white-space: nowrap;">ผลการติดตาม</th>
