--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -65,6 +65,9 @@
 			                    <a href="#" e-class="form-control input-sm" e-placeholder="Font Color" title="Font Color" style="color: white;" e-style="width: 100px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.colorFont"><small>{{ item.colorFont || '-' }}</small></a>
 			                       
+			                     
+			                    <i class="fa fa-cog" title="Advanced" style="cursor: pointer; position: absolute; right: 10px; bottom: 10px;" ng-click="advancedWD(item)"></i>
+			                       
 			                       
 			                </li>
 			            </ul>
