--- a/backend/src/main/webapp/app/lib/css/dnd_advanced.css
+++ b/backend/src/main/webapp/app/lib/css/dnd_advanced.css
@@ -159,11 +159,12 @@
     color: #fff;
     float: left;
     /* font-weight: 700; */
-    min-height: 136px;
+    min-height: 100px;
     margin: 5px;
     padding: 3px;
     text-align: center;
-    min-width: 220px;
+    min-width: 152px;
+    font-size: 12px;
 }
 
 .advancedDemo .itemlist > .liactive {
@@ -173,11 +174,12 @@
     color: #fff;
     float: left;
     /* font-weight: 700; */
-    min-height: 136px;
+    min-height: 100px;
     margin: 5px;
     padding: 3px;
     text-align: center;
-    min-width: 220px;
+    min-width: 152px;
+    font-size: 12px;
 }
 
 .advancedDemo .container-element {
