--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -1,9 +1,9 @@
 <div ui-view>
-	<div class="col-md-12">
+	<div style="position: absolute; top: 3px; right: 55px; z-index: 100000;">
 		<code ng-show="isOver">จำนวน field เกินกำหนด [Limited 30 fields]</code>
-		<button type="button" class="btn btn-info pull-right" style="margin-bottom: 5px;" ng-show="containers[0].length > 0" ng-click="detailDisplayConf()">ตั้งค่าหน้าแสดงข้อมูล</button>
+		<button type="button" class="btn btn-info" ng-show="containers[0].length > 0" ng-click="detailDisplayConf()">ตั้งค่าหน้าแสดงข้อมูล</button>
 	</div>  
-	<div class="row">  
+	<div class="row">
 		<div class="advancedDemo col-md-12">
 			<ul dnd-list="containers"
 			    dnd-allowed-types="['containerType']"
@@ -43,19 +43,25 @@
 			                    <input class="pull-left" title="วันหมดอายุ" name="expirationDate" type="radio" ng-model="$parent.$parent.$parent.expirationDateColumnName" ng-change="updateColumnName('expirationDate')" ng-value="item.columnName">
 			                    <input class="pull-left" title="วันเดือนปีเกิด" name="birthDate" type="radio" ng-model="$parent.$parent.$parent.birthDateColumnName" ng-change="updateColumnName('birthDate')" ng-value="item.columnName">
 			                    <i class="fa fa-bars" style="cursor: pointer;" title="เลือกแบบฟอร์ม Notice" ng-show="item.isNotice" ng-click="noticeList(item)"></i>
-			                    <br />
 			                    
-			                    <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 100%;" buttons="no" onaftersave="update()"
-			                       editable-text="item.dataType"><small>{{ item.dataType || '-' }}</small></a><br />
+			                    <!-- <br />
+			                    <br /> -->
+			                    
+			                    
+			                    <!-- <a href="#" e-class="form-control input-sm" title="Data Type" e-placeholder="Data Type" style="color: white;" e-style="width: 100%;" buttons="no" onaftersave="update()"
+			                       editable-text="item.dataType"><small>{{ item.dataType || '-' }}</small></a><br /> -->
 			                       
-			                    <a href="#" e-class="form-control input-sm" title="Column Name" e-required e-placeholder="Column Name" style="color: white;" e-style="width: 100%;" buttons="no" onaftersave="update()"
+			                    <div class="clearfix"></div>
+			                    <a href="#" e-class="form-control input-sm" title="Column Name" e-required e-placeholder="Column Name" style="color: white;" e-style="width: 146px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnName"><small>{{ item.columnName || '-' }}</small></a><br />
 			                       
-			                    <a href="#" e-class="form-control input-sm" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 100%;" buttons="no" onaftersave="update()"
+			                    <a href="#" e-class="form-control input-sm" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 146px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnNameAlias"><small>{{ item.columnNameAlias || '-' }}</small></a><br />
-			                       
-								<a href="#" ng-show="item.isNotice" e-class="form-control input-sm" title="Colum Name ที่ออก notice" e-placeholder="Colum Name ที่ออก notice" style="color: white;" e-style="width: 100%;" buttons="no" onaftersave="update()"
-			                       editable-text="item.noticeCusColName"><small>{{ item.noticeCusColName || '-' }}</small></a><br />
+								
+								
+								
+								<!-- <a href="#" ng-show="item.isNotice" e-class="form-control input-sm" title="Colum Name ที่ออก notice" e-placeholder="Colum Name ที่ออก notice" style="color: white;" e-style="width: 100%;" buttons="no" onaftersave="update()"
+			                       editable-text="item.noticeCusColName"><small>{{ item.noticeCusColName || '-' }}</small></a><br /> -->
 			                       
 			                    <!-- <i class="fa fa-tag" title="Backgroup Color" colorpicker colorpicker-position="top" style="cursor: pointer; color: {{item.colorBg}};" ng-model="item.colorBg"></i>   
 			                    <a href="#" e-class="form-control input-sm" e-placeholder="BG Color" title="BG Color" style="color: white;" e-style="width: 100px;" buttons="no" onaftersave="update()"
@@ -66,7 +72,7 @@
 			                       editable-text="item.colorFont"><small>{{ item.colorFont || '-' }}</small></a> -->
 			                       
 			                     
-			                    <i class="fa fa-cog" title="Advanced" ng-style="advanced.columnName == item.columnName ? {'color': '#7fba0c'} : {}" style="cursor: pointer; position: absolute; right: 10px; bottom: 10px;" ng-click="advancedWD(item)"></i>
+			                    <i class="fa fa-cog" title="Advanced" ng-style="advanced.columnName == item.columnName ? {'color': '#7fba0c'} : {}" style="cursor: pointer; position: absolute; right: 5px; bottom: 5px;" ng-click="advancedWD(item)"></i>
 			                       
 			                       
 			                </li>
