--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -72,8 +72,8 @@
 			                       editable-text="item.colorFont"><small>{{ item.colorFont || '-' }}</small></a> -->
 			                       
 			                     
-			                    <i class="fa fa-cog" title="Advanced" ng-style="advanced.columnName == item.columnName ? {'color': '#7fba0c'} : {}" style="cursor: pointer; position: absolute; right: 5px; bottom: 5px;" ng-click="advancedWD(item)"></i>
-			                       
+			                    <i class="fa fa-cog" title="Advanced" ng-style="advanced.columnName == item.columnName ? {'color': '#7fba0c'} : {}" style="cursor: pointer; position: absolute; right: 3px; bottom: 2px;" ng-click="advancedWD(item)"></i>
+			                    <span style="position: absolute; left: 3px; bottom: 0; font-size: 12px;">{{ item.dataType }}</span>
 			                       
 			                </li>
 			            </ul>
