--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -73,7 +73,7 @@
 			                       
 			                     
 			                    <i class="fa fa-cog" title="Advanced" ng-style="advanced.columnName == item.columnName ? {'color': '#7fba0c'} : {}" style="cursor: pointer; position: absolute; right: 3px; bottom: 2px;" ng-click="advancedWD(item)"></i>
-			                    <span style="position: absolute; left: 3px; bottom: 0; font-size: 12px;">{{ item.dataType }}</span>
+			                    <span style="position: absolute; left: 3px; bottom: 0;">{{ item.dataType }}</span>
 			                       
 			                </li>
 			            </ul>
