--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -52,10 +52,10 @@
 			                       editable-text="item.dataType"><small>{{ item.dataType || '-' }}</small></a><br /> -->
 			                       
 			                    <div class="clearfix"></div>
-			                    <a href="#" e-class="form-control input-sm" title="Column Name" e-required e-placeholder="Column Name" style="color: white;" e-style="width: 146px;" buttons="no" onaftersave="update()"
+			                    <a href="#" e-class="form-control input-sm" title="Column Name" e-required e-placeholder="Column Name" style="color: white;" e-style="width: 146px; font-size: 10px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnName"><small>{{ item.columnName || '-' }}</small></a><br />
 			                       
-			                    <a href="#" e-class="form-control input-sm" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 146px;" buttons="no" onaftersave="update()"
+			                    <a href="#" e-class="form-control input-sm" title="Alias Name" e-placeholder="Alias Name" style="color: white;" e-style="width: 146px; font-size: 10px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnNameAlias"><small>{{ item.columnNameAlias || '-' }}</small></a><br />
 								
 								
