--- a/backend/src/main/webapp/app/views/product/advanced.html
+++ b/backend/src/main/webapp/app/views/product/advanced.html
@@ -35,25 +35,27 @@
 	<div class="col-xs-6">
 		<div class="form-horizontal">
 			<div class="form-group">
-				<small class="col-xs-4 control-label" style="padding-right: 0;">Prefix</small>
+				<small class="col-xs-4 control-label" style="padding-right: 0;">Data Type</small>
 				<div class="col-xs-8 edit-cus" style="padding-left: 10px;">
-					<a href="#" style="padding-top: 5px; position: absolute;" e-class="form-control input-sm" buttons="no" 
-					   onaftersave="updateField('prefix')" editable-text="advanced.prefix">
-						<small>{{ advanced.prefix || 'empty' }}</small>
+					<a href="#" style="padding-top: 5px; position: absolute;" e-class="form-control input-sm" buttons="no"
+					   onaftersave="updateField('dataType')" editable-text="advanced.dataType">
+						<small>{{ advanced.dataType || 'empty' }}</small>
 					</a>
 				</div>
 			</div>
-			<div class="form-group" style="margin-bottom: 0;">
-				<small class="col-xs-4 control-label" style="padding-right: 0;">Province</small>
-				<div class="col-xs-8" style="padding-left: 10px;">
-					<div class="checkbox_animate" style="margin-top: 5px;">
-						<label style="cursor: pointer;">
-			            	<input type="checkbox" ng-model="advanced.isProvince" ng-click="updateField('isProvince')">
-			            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-			          	</label>
-			        </div>
+		</div>
+		<div class="form-horizontal" ng-show="advanced.isNotice">
+			<div class="form-group">
+				<small class="col-xs-4 control-label" style="padding-right: 0;">NT Name</small>
+				<div class="col-xs-8 edit-cus" style="padding-left: 10px;">
+					<a href="#" style="padding-top: 5px; position: absolute;" e-class="form-control input-sm" buttons="no"
+					   onaftersave="updateField('noticeCusColName')" editable-text="advanced.noticeCusColName">
+						<small>{{ advanced.noticeCusColName || 'empty' }}</small>
+					</a>
 				</div>
 			</div>
+		</div>
+		<div class="form-horizontal">
 			<div class="form-group">
 				<small class="col-xs-4 control-label" style="padding-right: 0;">Style</small>
 				<div class="col-xs-8 edit-cus2" style="padding-left: 10px;">
@@ -74,23 +76,25 @@
 	<div class="col-xs-6">
 		<div class="form-horizontal">
 			<div class="form-group">
-				<small class="col-xs-4 control-label" style="padding-right: 0;">Data Type</small>
+				<small class="col-xs-4 control-label" style="padding-right: 0;">Prefix</small>
 				<div class="col-xs-8 edit-cus" style="padding-left: 10px;">
-					<a href="#" style="padding-top: 5px; position: absolute;" e-class="form-control input-sm" buttons="no"
-					   onaftersave="updateField('dataType')" editable-text="advanced.dataType">
-						<small>{{ advanced.dataType || 'empty' }}</small>
+					<a href="#" style="padding-top: 5px; position: absolute;" e-class="form-control input-sm" buttons="no" 
+					   onaftersave="updateField('prefix')" editable-text="advanced.prefix">
+						<small>{{ advanced.prefix || 'empty' }}</small>
 					</a>
 				</div>
 			</div>
 		</div>
-		<div class="form-horizontal" ng-show="advanced.isNotice">
-			<div class="form-group">
-				<small class="col-xs-4 control-label" style="padding-right: 0;">NT Name</small>
-				<div class="col-xs-8 edit-cus" style="padding-left: 10px;">
-					<a href="#" style="padding-top: 5px; position: absolute;" e-class="form-control input-sm" buttons="no"
-					   onaftersave="updateField('noticeCusColName')" editable-text="advanced.noticeCusColName">
-						<small>{{ advanced.noticeCusColName || 'empty' }}</small>
-					</a>
+		<div class="form-horizontal">
+			<div class="form-group" style="margin-bottom: 0;">
+				<small class="col-xs-4 control-label" style="padding-right: 0;">Province</small>
+				<div class="col-xs-8" style="padding-left: 10px;">
+					<div class="checkbox_animate" style="margin-top: 5px;">
+						<label style="cursor: pointer;">
+			            	<input type="checkbox" ng-model="advanced.isProvince" ng-click="updateField('isProvince')">
+			            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+			          	</label>
+			        </div>
 				</div>
 			</div>
 		</div>
